# rsahmi

./: .Rbuildignore  .gitignore  .radian_history  CRAN-SUBMISSION  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  Scratch.RConsole  configure  configure.win  cran-comments.md
R/: blsd.R  contaminants.R  denoise_counts.R  extract_microbiome.R  extractor.R  import-standalone-pkg.R  import-standalone-polars.R  kmer.R  koutreads.R  kractor.R  kraken2.R  kraken_microbiome.R  kraken_report.R  kraken_taxon.R  krakenx.R  krcount.R  krmikm.R  kuactor.R  microbiome_out.R  prep.R  read_kr.R  rpmm_quantile.R  rsahmi-package.R  run_kraken_microbiome.R  run_krmikm.R  sckmer-polars.R  sckmer.R  seq-action.R  seq-range.R  seq-refine.R  slsd.R  taxa_counts.R  ubrange.R  (+4 more)
src/rust/: Cargo.toml
src/rust/src/: batchsender.rs  bench.rs  extractor.rs  fastq_reader.rs  fastq_record.rs  kractor.rs  kreport.rs  lib.rs  reader.rs  reader0.rs  sckmer.rs  seq_action.rs  seq_range.rs  seq_tag.rs  utils.rs
src/rust/src/chunk/: io.rs  mod.rs  parser.rs  reader.rs  splitter.rs
src/rust/src/chunk/reader/: mod.rs  splitter.rs
src/rust/src/koutput_reads/: koutput.rs  mod.rs
src/rust/src/koutput_reads/reads/: mod.rs  paired.rs  single.rs  stream.rs
src/rust/src/koutput_reads/reads/io/: mod.rs  ubread.rs
src/rust/src/koutput_reads/reads/mmap/: ubread.rs
src/rust/src/kractor/: batchsender.rs  buffer.rs  io.rs  koutput.rs  mod.rs  output.rs  reads.rs
src/rust/src/kractor/koutput/: io.rs  mmap.rs  mod.rs  parse.rs  reader.rs
src/rust/src/kractor/reads/: mod.rs  paired.rs  range.rs  single.rs
src/rust/src/kractor/reads/io/: mod.rs  paired.rs  reader.rs  single.rs  ubread.rs
src/rust/src/kractor/reads/mmap/: mod.rs  paired.rs  reader.rs  single.rs  ubread.rs
src/rust/src/kractor/reads/parser/: fasta.rs
src/rust/src/kractor/reads/parser/fastq/: container.rs  mod.rs  reader.rs
src/rust/src/krcount/: mod.rs
src/rust/src/krcount/count/: counter.rs  mod.rs
src/rust/src/parser/: fasta.rs  mod.rs
src/rust/src/parser/fastq/: container.rs  error.rs  mod.rs  record.rs
src/rust/src/parser/fastq/reader/: bytes.rs  slice.rs
src/rust/src/reader/: bytes.rs  mod.rs  slice.rs
src/rust/src/seq_refine/: mod.rs  paired.rs  seq_action.rs  single.rs
src/rust/src/seq_refine/io/: mod.rs  paired.rs  single.rs
src/rust/src/seq_refine/mmap/: mod.rs  paired.rs  single.rs
(+61 files in other folders)
