[package]
name = 'rsahmi'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.87'

[lib]
crate-type = ['staticlib']
name = 'rsahmi'

[dependencies]
extendr-api = { version = "0.8.0", features = [ "result_list" ] }
anyhow = '*'
memmap2 = '*'
bytes = '*'
rayon = '*'
crossbeam-channel = { version = "*" }
memchr = { version = "*" }
aho-corasick = { version = "*" }
rustc-hash = { version = "*" }
pprof = { version = "0.14", optional = true, features = ["flamegraph"] }

[dev-dependencies]
tempfile = '*'
rand = "0.8"

[features]
bench = ["dep:pprof"]

[lints.clippy]
needless_late_init = "allow"
